--- a/index.html
+++ b/index.html
@@ -46,6 +46,77 @@
         </nav>
     </header>
     <!-- Header part end -->
+
+    <main>
+        <!-------- Home ------->
+        <section id="home" class="relative">
+            <div class="container">
+                <!-- blob 1 -->
+                <div
+                    class="w-64 h-64 bg-green-700 rounded-full blur-3xl -z-10 opacity-40 absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2">
+                </div>
+                <!-- blob 2 -->
+                <div
+                    class="w-64 h-64 bg-green-700 rounded-full blur-3xl -z-10 opacity-40 absolute right-0 bottom-0">
+                </div>
+                <div class="flex flex-col items-center gap-5 lg:flex-row">
+                    <!-- content -->
+                    <div class="w-full space-y-5 lg:w-1/2">
+                        <h1>
+                            <span class="text-yellow-500">Plants</span> make a <br>
+                            positive
+                            <span class="text-yellow-500">impact</span> on <br>
+                            your environment
+                        </h1>
+                        <p class="text-slate-300 font-Lobster">
+                            Trees are super important for life on Earth, including us humans. They give us food and keep
+                            our planet’s balance in
+                            check.
+                        </p>
+                        <div class="flex flex-col gap-2 sm:flex-row md:gap-4 lg:pt-5 xl:pt-5">
+                            <button class="btn">
+                                <span>Shop Now</span>
+                                <i class="ri-leaf-line"></i>
+                            </button>
+                            <button class="btn btn_outline">
+                                <span>Know More</span>
+                                <i class="ri-leaf-line"></i>
+                            </button>
+                        </div>
+                        <p class="text-xs font-bold text-slate-300">You will get 30-days free trial.</p>
+                        <div class="flex items-center gap-5 text-lg lg:pt-5">
+                            <i
+                                class="ri-facebook-fill text-slate-300 hover:text-yellow-500 duration-300 cursor-pointer"></i>
+                            <i
+                                class="ri-twitter-x-line text-slate-300 hover:text-yellow-500 duration-300 cursor-pointer text-base"></i>
+                            <i
+                                class="ri-instagram-line text-slate-300 hover:text-yellow-500 duration-300 cursor-pointer"></i>
+                            <i
+                                class="ri-linkedin-fill text-slate-300 hover:text-yellow-500 duration-300 cursor-pointer"></i>
+                        </div>
+                    </div>
+
+                    <!-- image -->
+                    <div class="w-full relative lg:w-1/2">
+                        <img src="assets/img/home.png" alt="home-image">
+
+                        <!-- leaf -->
+                        <div class="absolute -top-10 right-0 opacity-30 xl:top-5 animate-movingY">
+                            <i class="ri-leaf-line text-6xl text-yellow-500"></i>
+                        </div>
+                        <!--flower -->
+                        <div class="bottom-0 left-0 opacity-30 xl:bottom-12 animate-rotating">
+                            <i class="ri-flower-line text-6xl text-yellow-500"></i>
+                        </div>
+                        <!-- plant -->
+                        <div class="hidden absolute -top-10 -left-5 opacity-30 lg:block animate-scalingUp mt-10">
+                            <i class="ri-plant-line text-6xl text-yellow-500"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
     <script src="main.js"></script>
 </body>
 
