--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
                     class="w-64 h-64 bg-green-700 rounded-full blur-3xl -z-10 opacity-40 absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2">
                 </div>
                 <!-- blob 2 -->
-                <div
-                    class="w-64 h-64 bg-green-700 rounded-full blur-3xl -z-10 opacity-40 absolute right-0 bottom-0">
+                <div class="w-64 h-64 bg-green-700 rounded-full blur-3xl -z-10 opacity-40 absolute right-0 bottom-0">
                 </div>
                 <div class="flex flex-col items-center gap-5 lg:flex-row">
                     <!-- content -->
@@ -116,6 +115,59 @@
                 </div>
             </div>
         </section>
+
+        <!------- Services ----->
+        <div class="bg-white text-green-900 py-20">
+            <div class="container w-full grid grid-cols-1 gap-8 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4">
+                <!-- card 1 start -->
+                <div
+                    class="border border-green-900 p-5 cursor-pointer rounded-md hover:shadow-2xl hover:-translate-y-1 duration-300 space-y-5">
+                    <div class="flex items-center gap-5">
+                        <i class="ri-truck-line text-3xl md:text-4xl xl:text-5xl"></i>
+                        <p class="text-lg font-bold">Fast <br>
+                        Delivery
+                    </div>
+                    <p class="font-Lobster">Trees are super important for life on Earth, including us humans.</p>
+                </div>
+                <!-- card 1 end -->
+
+                <!-- card 2 -->
+                <div
+                    class="border border-green-900 p-5 cursor-pointer rounded-md hover:shadow-2xl hover:-translate-y-1 duration-300 space-y-5">
+                    <div class="flex items-center gap-5">
+                        <i class="ri-customer-service-line text-3xl md:text-4xl xl:text-5xl"></i>
+                        <p class="text-lg font-bold">Great Customer <br>
+                            Service
+                    </div>
+                    <p class="font-Lobster">Trees are super important for life on Earth, including us humans.</p>
+                </div>
+                <!-- card 2 end -->
+
+                <!-- card 3 -->
+                <div
+                    class="border border-green-900 p-5 cursor-pointer rounded-md hover:shadow-2xl hover:-translate-y-1 duration-300 space-y-5">
+                    <div class="flex items-center gap-5">
+                        <i class="ri-plant-line text-3xl md:text-4xl xl:text-5xl"></i>
+                        <p class="text-lg font-bold">Original <br>
+                        Plants
+                    </div>
+                    <p class="font-Lobster">Trees are super important for life on Earth, including us humans.</p>
+                </div>
+                <!-- card 3 end -->
+
+                <!-- card 4 -->
+                <div
+                    class="border border-green-900 p-5 cursor-pointer rounded-md hover:shadow-2xl hover:-translate-y-1 duration-300 space-y-5">
+                    <div class="flex items-center gap-5">
+                        <i class="ri-money-dollar-circle-line text-3xl md:text-4xl xl:text-5xl"></i>
+                        <p class="text-lg font-bold">Affordable <br>
+                        Price
+                    </div>
+                    <p class="font-Lobster">Trees are super important for life on Earth, including us humans.</p>
+                </div>
+                <!-- card 4 end -->
+            </div>
+        </div>
     </main>
     <script src="main.js"></script>
 </body>
